# quadruped_robot_12_DOF

./: README.md
champ/fooldog_config/: CMakeLists.txt  README.md  config.json  package.xml
champ/fooldog_config/config/gait/: gait.yaml
champ/fooldog_config/config/joints/: joints.yaml
champ/fooldog_config/config/links/: links.yaml
champ/fooldog_config/include/: quadruped_description.h
champ/fooldog_config/launch/: bringup.launch  bringup.launch.py  gazebo.launch  navigate.launch  slam.launch  spawn_robot.launch
champ/fooldog_urdf/: CMakeLists.txt  package.xml
champ/fooldog_urdf/config/: joint_names_fooldog_urdf.yaml
champ/fooldog_urdf/launch/: description.launch.py  display.launch  gazebo.launch
champ/fooldog_urdf/meshes/: base_link.STL  bl_Link.STL  bld_Link.STL  blf_Link.STL  blu_Link.STL  br_Link.STL  brd_Link.STL  brf_Link.STL  bru_Link.STL  fl_Link.STL  fld_Link.STL  flf_Link.STL  flu_Link.STL  fr_Link.STL  frd_Link.STL  frf_Link.STL  fru_Link.STL
champ/fooldog_urdf/urdf/: fooldog_urdf.csv  fooldog_urdf.urdf  test.urdf
champ_interfaces/: CMakeLists.txt  package.xml
champ_teleop/: champ_teleop.py  joy_controller.py  joy_controller_new.py
mqtt-ros/: app.py  params.yaml
mqtt-ros/static/: index.html
quadruped_robot_12_DOF/triceratops_base/: Triceratops_Config.py  Triceratops_ControlCmd.py
triceratops_base/: Gait.py  Raibert_Gait.py  Triceratops_Config.py  Triceratops_ControlCmd.py  Triceratops_Gait.py  Triceratops_Kinematic.py  test.py
triceratops_control/: package.xml  setup.cfg  setup.py
triceratops_robot/: README.md
(+70 files in other folders)
