<?xml version="1.0"?>
<package format="2">
  <name>fooldog_config</name>
  <version>0.1.0</version>
  <description>fooldog Champ Config Package</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>