<?xml version="1.0"?>
<package format="3">
  <name>fooldog_urdf</name>
  <version>0.1.0</version>
  <description>URDF Description package for fooldog_urdf</description>

  <maintainer email="TODO@email.com" />
  <author>ray Chen</author>

  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>